libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/type-generic-generic-ident.jsonc
//@ run: fail
//@ description: An identifier with generic arguments should fail
[
  "::kernel::special_form::type",
  "Foo<Bar<Baz>>",
  //~^ ERROR expected a simple type parameter
  { "#struct": { "foo": "Integer" } },
  "_"
]
